# XDecorations

./: .gitignore  ChangeLog  Changlog  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  XDecorations.mpz  configure  configure.ac  draw.cpp  draw.h  globals.cpp  globals.h  makepkg  makerotate  pkg  remakesourcelist  routines.cpp  routines.h  startstop.cpp  startstop.h  toon.h  toon_root.cpp  update.cpp  update.h  xdecorations.c  xdecorations.cpp  xdecorations.rc
XDecorations/: flagsandlibs  sources
XDecorations/app/: Makefile.am  Makefile.in
XDecorations/src/: draw.cpp  draw.h  globals.cpp  globals.h  internet.cpp  internet.h  routines.cpp  routines.h  startstop.cpp  startstop.h  toon.h  toon_root.cpp  update.cpp  update.h  (+1 more)
pixmaps/: HalloweenDecOff.xpm  HalloweenFigureOff1.xpm  HalloweenFigureOff2.xpm  HalloweenFigureOn1.xpm  HalloweenFigureOn2.xpm  HalloweenFly1.xpm  HalloweenFly2.xpm  HalloweenFly3.xpm  HalloweenFly4.xpm  HalloweenLampsOff.xpm  HalloweenLampsOff1.xpm  HalloweenLampsOff2.xpm  HalloweenLampsOn.xpm  HalloweenLampsOn1.xpm  HalloweenLampsOn2.xpm  HalloweenStar0.xpm  HalloweenStar1.xpm  HalloweenTree2.xpm  HalloweenTreeLights1.1.xpm  HalloweenTreeLights1.xpm  HalloweenTreeLights2.2.xpm  HalloweenTreeLights2.xpm  HalloweenTreeLights3.xpm  HalloweenTreeLights4.xpm  HalloweenTreeLights5.xpm  HalloweenTreeLights6.xpm  HalloweenTreeLights7.xpm  HalloweenTreeLights8.xpm  LampsOff.XPM  LampsOn.XPM  LightsBlue0.xpm  LightsPurple1.xpm  LightsRed1.xpm  Popcorn.xpm  Star1.xpm  Tinsel.xpm  Tree1.xpm  XmasFigureOff1.xpm  XmasFigureOn1.xpm  XmasFly1.xpm  (+18 more)
(+2 files in other folders)
