#
#
AC_INIT([XDecorations],[0.1.10],[XXX],[XDecorations])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

XEXT_MODULES="xext >= 1.3.2"
PKG_CHECK_MODULES(XEXT, $XEXT_MODULES)
AC_SUBST(XEXT_CFLAGS)
AC_SUBST(XEXT_LIBS)

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

IMLIB_MODULES="imlib2 >= 1.4.6"
PKG_CHECK_MODULES(IMLIB, $IMLIB_MODULES)
AC_SUBST(IMLIB_LIBS)
AC_SUBST(IMLIB_CFLAGS)

AC_OUTPUT(Makefile XDecorations/app/Makefile)

